# clarismd-python

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  RELEASING.md  SECURITY.md  codegen-config.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
examples/: async_chat.py  audit_export.py  compliance_score.py  phi_scan.py  quickstart.py  streaming.py
scripts/: codegen.sh
src/clarismd/: __init__.py  _client.py  _exceptions.py  _streaming.py  _types.py  _version.py
src/clarismd/_generated/: __init__.py
src/clarismd/resources/: __init__.py  _base.py  audit.py  chat.py  completions.py  compliance.py  embeddings.py  health.py  keys.py  moderations.py  phi.py
tests/: __init__.py  conftest.py  test_async.py  test_audit.py  test_chat.py  test_compliance.py  test_errors.py  test_health.py  test_idempotency.py  test_keys.py  test_phi.py  test_resources_misc.py  test_retry.py  test_streaming.py
