[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clarismd"
version = "0.1.0"
description = "Open-source AI gateway with PHI-aware governance — Python client"
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "ClarisMD contributors" },
]
keywords = ["clarismd", "llm", "openai", "healthcare", "phi", "audit", "ai-gateway"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27,<1.0",
    "pydantic>=2.0,<3.0",
    "typing-extensions>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "pyright>=1.1",
    "build>=1.0",
]

[project.urls]
Homepage = "https://clarismd.com"
Documentation = "https://docs.clarismd.com"
Repository = "https://github.com/clarismd/clarismd-python"
Issues = "https://github.com/clarismd/clarismd-python/issues"
Changelog = "https://github.com/clarismd/clarismd-python/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/clarismd"]

[tool.hatch.build.targets.sdist]
include = [
    "src/clarismd",
    "README.md",
    "LICENSE",
    "NOTICE",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.pyright]
# Pyright type-checks the public package only; tests rely on dynamic fixtures
# from pytest-httpx whose annotations would force noisy `Any` casts.
include = ["src"]
exclude = ["src/clarismd/_generated"]
typeCheckingMode = "strict"
pythonVersion = "3.9"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
# Underscore-prefixed names within the same package are intentional
# module-private symbols, not "leaked" privates — strict mode flags every
# cross-module import of them, which would force renaming half the package.
reportPrivateUsage = false
# Helpers in resources/_base.py are imported by every resource module but
# not used in the file they're declared in; pyright strict flags them as
# unused. Same story for top-level fixture helpers in tests/conftest.py.
reportUnusedClass = false
reportUnusedFunction = false

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = ["src/clarismd/_generated"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line length handled by formatter
    "UP006", # Dict/List[...] from typing — runtime-safe on py3.9
    "UP007", # X | Y unions need py3.10+
    "UP035", # `from typing import Dict/List` — kept for runtime use on py3.9
    "UP045", # Optional[X] is fine on py3.9
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["clarismd"]
omit = ["src/clarismd/_generated/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
